--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,5 @@ org.gradle.daemon=false
 
 #Project settings
 forge_version=1.12-14.21.1.2387
-version=0.13.0_for_1.12
+  # build with forge 14.23.5.2860
+version=0.14.0_for_1.12
